Add blog section and first post

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,6 +9,7 @@
       <a class="hover:text-white" href="/services">Services</a>
       <a class="hover:text-white" href="/work">Work</a>
       <a class="hover:text-white" href="/about">About</a>
+      <a class="hover:text-white" href="/blog">Blog</a>
       <a class="hover:text-white" href="/contact">Contact</a>
       <a class="ml-2 rounded-full border border-white/15 px-4 py-2 hover:border-white/30 hover:text-white"
          href="mailto:contact@zenithdigital.me">Email</a>
